<resources>
    <string name="app_name">العاب ذاكرة  للجوال</string>
    <string name="mem_number">ذاكرة رقمية</string>
    <string name="mem_images">ذاكرة صورية</string>
    <string name="welcome">مرحبا بك فى لعبه الذاكرة</string>
    <string name="font_name_fontawesome">fontawesome</string>
    <string name="font_name_source_sans_pro">SourceSansPro</string>
    <string name="home">الرئيسية</string>
    <string name="fuces">ركز فى الارقام المعروضة</string>
    <string name="orderimages">أدخل الصور فى أماكنها</string>
    <string name="rightAns">أجايه صحيحه أحسنت .....</string>
    <string name="wrongAns">اسف أجابه غير صحيحة</string>
    <string name="results">النتيجه</string>
    <string name="wrongAnswer">الاجابات الخطا</string>
    <string name="rightAnswer">الاجابات الصحيحة</string>
    <string name="rwiet">أدخل الارقام أو الحروف  بنفس الترتيب</string>
    <string name="orderByright">الترتيب بواسطه الكتابه</string>
    <string name="orderbyMovie">الترتيب بواسطه التحريك</string>
    <string name="choseCategory">أختر الموضوع</string>
    <string name="numbers">الارقام‎</string>
    <string name="letters">الحروف‎</string>
    <string name="aletters">الحروف العربية</string>
    <string name="categories">الموضوعات</string>
</resources>
