<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.memory_games_app.home">




    <RelativeLayout
        style="@style/home_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/lightPanel"
            style="@style/light_panel"
            android:layout_width="match_parent"

            >



<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/subtitle"
android:id="@+id/welcome_txt"
    android:text="@string/welcome"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="30dp"
    android:layout_marginRight="10dp"
    />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:layout_below="@+id/welcome_txt"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/numbers_bt"
            style="@style/itempanl"
            android:layout_width="match_parent"
            android:layout_below="@+id/lightPanel"

            android:layout_gravity="right">

            <Button
                android:id="@+id/numbers_bt_text"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="goToMoving"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/imageView"
                android:layout_toStartOf="@+id/imageView"

                android:text="@string/orderbyMovie"


               />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/numbers_bt_text"
                android:layout_gravity="right"
                android:layout_marginEnd="16dp"



                android:onClick="goToMoving"

                android:layout_marginRight="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/numbers_icon" />

        </RelativeLayout>


        <RelativeLayout
            style="@style/itempanl"
            android:layout_width="match_parent"
            android:layout_below="@+id/numbers_bt">


            <Button
                android:id="@+id/images_bt_text"
                style="@style/button"

                android:onClick="goToRwiteing"

                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/imageView2"
                android:layout_toStartOf="@+id/imageView2"
                android:text="@string/orderByright"

                />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"

                android:layout_alignTop="@+id/images_bt_text"
                android:layout_gravity="right"
                android:layout_marginEnd="23dp"

                android:onClick="goToRwiteing"

                android:layout_marginRight="23dp"
                android:scaleType="fitCenter"
                android:src="@drawable/images_icon" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


</RelativeLayout>
